--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "jsx": "preserve",
     "incremental": true
   },
+  "ts-node": {
+    "esm": true
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
